3.4
	+ Added and used checkMailNotInUse method
	+ Added _delVDomainAbort to LdapVDomain base to give the
	  opportunity to abort vdomain removals
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Added and used checkMailNotInUse method
	+ Don't add mail which already exists when adding group alias
	+ Better integration with openchange account addon
	+ Remove openchange account when removing mail account
	+ Postfix max mail size is increased by 36% because of base64 encoding
	+ Better integration of group alias addon
	+ Added openchange outgoing mail rewriting
	+ Added sieve_dir plugin parameter
	+ Nopass dovecot policy enabled only when Openchange provisioned
3.3
	+ Allow to use vdomains table when module is unconfigured
	+ Dovecot passdb reordering and typo
	+ Switch from Error to TryCatch for exception handling
	+ Added required code to integrate with OpenChange
	+ Added missing EBox::Exceptions uses
	+ Delete migration code from old versions
	+ Preservice and postservice hooks now should work properly
	+ Fixed regression which broke external account modification
	+ Set version to 3.3
	+ Add openchange compatibility
3.2
	+ Set version to 3.2
3.1.7
	+ Override daemons when migrating from 3.0
	+ Minor enhancements to some note texts
3.1.6
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
3.1.5
	+ Fixed typo in external account user corner model
	+ Adapted to new CSS styles
	+ Fixed bug which allowed to use incorrect external addresses in
	  fetchmail accounts
3.1.4
	+ Fixed typo in master.cf when mail filter is enabled
3.1.3
	+ Adapt group and users addon to right panel view
	+ mail-ldap init script dies on LDAP add error
	+ Added menu icon
	+ Added new userCorner method to external accounts model
	+ Updated to use renamed method EBox::Ldap::connection.
	+ Adapt firewall rules to new accept chains
	+ Adapted user addon to multi-OU tree view