@@ -1,0 +1,11 @@
+<%args>
+$masterPassword
+</%args>
+# Generated by Zentyal
+
+driver = sqlite
+connect = /tmp/dovecot.fake.sqlite
+default_pass_scheme = PLAIN
+
+password_query = SELECT '%u' AS user, '<% $masterPassword %>' AS password
+
